# wheel

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
assets/models/: Wheel.glb
assets/shaders/: grass_shader.wgsl  perlin_noise_2d.wgsl
src/: camera.rs  constants.rs  controls.rs  debug.rs  gens.rs  lib.rs  main.rs  meshes.rs  movement.rs  operation.rs  resources.rs  setup.rs  wheel.rs
src/components/: camera.rs  character.rs  mod.rs  wheel.rs
src/components/cameras/camera/: constants.rs  mod.rs  movement.rs  plugin.rs  setup.rs
src/components/characters/player/: constants.rs  effects.rs  mod.rs  movement.rs  movement_failed.rs  plugin.rs  resources.rs  spawn.rs
src/components/wheel/: mod.rs  plugin.rs  resources.rs  setup.rs  spawn.rs  wheel.rs
src/gens/: clouds.rs  grass.rs  mod.rs  particles.rs  terrain.rs
src/gens/grass/: _grass-original.rs  _unused.rs  colours.rs  constants.rs  gen_geometry.rs  gen_init.rs  gen_verts.rs  grass.rs  materials.rs  mod.rs  plugin.rs  resources.rs  update.rs
src/gens/particles/: mod.rs  resources.rs  sand_particles.rs
src/gens/rain/: conditions.rs  constants.rs  locator.rs  mod.rs  plugin.rs  resources.rs  update.rs
src/gens/rocks/: constants.rs  materials.rs  mod.rs  plugin.rs  resources.rs  rock.rs  textures.rs  types.rs  update.rs
src/gens/terrain/: colours.rs  mod.rs  plugin.rs  resources.rs  terrain.rs  texture.rs
src/levels/: common.rs  conditions.rs  mod.rs  plugin.rs  resources.rs
src/levels/scenes/: mod.rs  sand_hills.rs
src/movement/: constants.rs  mod.rs  movement.rs  orientation.rs
src/ui/: letterbox.rs  mod.rs  plugin.rs  setup.rs
src/ui/letterbox/: constants.rs  letterbox.rs  mod.rs  plugin.rs  resources.rs
src/ui/subtitles/: constants.rs  mod.rs  plugin.rs  resources.rs  subtitles.rs
src/utils/: angles.rs  colours.rs  mod.rs  numbers.rs  perlin.rs  position.rs  roll_pitch_yaw.rs  update_checks.rs
