[package]
name = "wheel"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy_debug_grid = "0.6.0"
bevy_hanabi = "0.12.0"
bevy_pbr = "0.14.0"
bevy_rapier3d = "0.27.0"
bevy_shader_utils = "0.7.0"
cgmath = "0.18.0"
iyes_perf_ui = "0.3.0"
noise = "0.9.0"
rand = "0.8.5"

[profile.release]
debug = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
