[package]
name = "wheel"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy-inspector-egui = "0.25.2"
bevy_debug_grid = "0.6.0"
bevy_framepace = "0.17.1"
bevy_hanabi = "0.12.2"
bevy_pbr = "0.14.2"
bevy_rapier3d = "0.27.0"
bevy_shader_utils = "0.7.0"
cgmath = "0.18.0"
iyes_perf_ui = "0.3.0"
noise = "0.9.0"
rand = "0.8.5"
tracing-tracy = "0.11.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Don't run as release for dev (too slow, no debug), other config will cater for decent dev
# https://bevy-cheatbook.github.io/pitfalls/performance.html
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
# debug = true
debug = false
